# TurboHash

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build-release.yml
src/: cache.rs  engine.rs  error.rs  font.rs  hash.rs  main.rs  progress.rs  scanner.rs  ui.rs  utils.rs  worker.rs
